--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,14 @@
 <p>
   welcome to chat app
 </p>
+<ol id="messages"></ol>
+<form id="message-form">
+  <input name="message" type="text" placeholder="text here" />
+<button>SEND</button>
+</form>
 
 <script src="/socket.io/socket.io.js"></script>
+<script src="/js/lib/jquery-3.2.1.min.js" ></script>
 <script src="/js/index.js"></script>
 </body>
 </html>
