--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <input name="message" type="text" placeholder="text here" />
 <button>SEND</button>
 </form>
+<button id="location">SEND LOCATION</button>
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/lib/jquery-3.2.1.min.js" ></script>
