--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     </div>
     </div>
 
-<script id="message-template" type:"text/template">
+<script id="message-template" type="text/template">
 <li class="message">
 <div class="message__title">
 <h4>{{from}}<h4>
@@ -37,7 +37,7 @@
 </li>
 </script>
 
-<script id="location-message-template" type:"text/template">
+<script id="location-message-template" type="text/template">
 <li class="message">
 <div class="message__title">
 <h4>{{from}}<h4>
