--- a/public/index.html
+++ b/public/index.html
@@ -1,59 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="/css/styles.css">
   <meta charset="utf-8">
-<title>
-</title>
+  <title>WELCOME TO CHATAPP </title>
+  <link rel="stylesheet" href="/css/styles.css">
+  <meta name="viewport" content="width=device-width , initial-scale=1 , user scalable-no">
 </head>
-<body class="chat">
-
-  <div class="chat__sidebar">
-    <h3>Active Friends</h3>
-    <div id="users"></div>
+<body class="centered-form">
+  <div class="centered-form__form">
+    <form action="/chat.html">
+     <div class="form-field">
+        <h3>JOIN CHAT</h3>
+     </div>
+     <div class="form-field">
+        <label>Enter Name</label>
+        <input type="text" name="name" autofocus/>
+     </div>
+     <div class="form-field">
+       <label>Enter GROUP NAME</label>
+       <input type="text" name="room" />
+    </div>
+     <div class="form-field">
+       <button>JOIN</button>
+     </div>
+   </form>
   </div>
-
-  <div class="chat__main">
-    <ol id="messages" class="chat__messages"></ol>
-
-    <div class="chat__footer">
-            <form id="message-form">
-        <input name="message" type="text" placeholder="text here" autofocus autocomplete="off" />
-      <button>SEND</button>
-      </form>
-      <button id="location">Send location</button>
-    </div>
-    </div>
-
-<script id="message-template" type="text/template">
-<li class="message">
-<div class="message__title">
-<h4>{{from}}<h4>
-<span>{{time}}</span>
-</div>
-<div class="message__body">
-<p>{{text}}</p>
-</div>
-</li>
-</script>
-
-<script id="location-message-template" type="text/template">
-<li class="message">
-<div class="message__title">
-<h4>{{from}}<h4>
-<span>{{time}}</span>
-</div>
-<div class="message__body">
-<p><a href="{{url}}" target="_blank">My location</a></p>
-</div>
-</li>
-</script>
-
-
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/lib/jquery-3.2.1.min.js" ></script>
-<script src="/js/lib/moment.js"></script>
-<script src="/js/index.js"></script>
-<script src="/js/lib/mustache.js"></script>
 </body>
 </html>
