--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>WELCOME TO CHATAPP </title>
   <link rel="stylesheet" href="/css/styles.css">
-  <meta name="viewport" content="width=device-width , initial-scale=1 , user-scalable-no">
+  <meta name="viewport" content="width=device-width , initial-scale=1 , user-scalable=no">
 </head>
 <body class="centered-form">
   <div class="centered-form__form">
